Update with project desc.

--- a/steam.ipynb
+++ b/steam.ipynb
@@ -1,8 +1,59 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "30c68162",
+   "metadata": {},
+   "source": [
+    "# STEAM DATA TREND (2024)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2db765d",
+   "metadata": {},
+   "source": [
+    "# DESCRIPTION\n",
+    "\n",
+    "We want to chart:\n",
+    "Average playtime vs publisher class\n",
+    "Average playtime vs review score\n",
+    "Average playtime vs price"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f598808",
+   "metadata": {},
+   "source": [
+    "# MISC\n",
+    "\n",
+    "-- Data set did not specify currency, had to double check to make sure  \n",
+    "-- Some games might have been translated indepdently, steamId still valid  \n",
+    "-- Some games are incorrectly labeled or missing information (WWE 2k24 was deluxe edition)  \n",
+    "-- Found a price outlierr in wwe 2k24 since (99.99)  \n",
+    "-- Revenue data based on estimates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18c5b6a7",
+   "metadata": {},
+   "source": [
+    "## About this data set:\n",
+    "This dataset contains comprehensive information on the top 1500 games released on Steam between January 1, 2024, and September 9, 2024. Aggregated from 30 separate files, and combined into a single dataset. Minor adjustments were made, such as aligning game release dates for consistency.\n",
+    "\n",
+    "## Key Features:\n",
+    "Game Details: Includes titles, release dates, and developer/publisher information.\n",
+    "Sales and Revenue: Tracks the number of copies sold, revenue generated, and pricing details.\n",
+    "Player Engagement: Provides average playtime, peak player counts, and other user engagement metrics.\n",
+    "Reviews and Scores: Features review scores and ratings.\n",
+    "Dynamic Market Data: Offers insights into game performance trends over time, such as sales rank and price fluctuations.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a15d23f8",
    "metadata": {},
    "outputs": [
@@ -56,89 +107,89 @@
        "      <td>2315690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>EARTH DEFENSE FORCE 6</td>\n",
-       "      <td>25-07-2024</td>\n",
-       "      <td>159806</td>\n",
-       "      <td>59.99</td>\n",
-       "      <td>7882151.0</td>\n",
-       "      <td>29.651061</td>\n",
-       "      <td>57</td>\n",
-       "      <td>Indie</td>\n",
-       "      <td>D3PUBLISHER</td>\n",
-       "      <td>SANDLOT</td>\n",
-       "      <td>2291060</td>\n",
+       "      <th>597</th>\n",
+       "      <td>The Crew Motorfest</td>\n",
+       "      <td>18-04-2024</td>\n",
+       "      <td>56044</td>\n",
+       "      <td>69.99</td>\n",
+       "      <td>1902618.0</td>\n",
+       "      <td>18.217624</td>\n",
+       "      <td>59</td>\n",
+       "      <td>AAA</td>\n",
+       "      <td>Ubisoft</td>\n",
+       "      <td>Ubisoft Ivory Tower</td>\n",
+       "      <td>2698940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Sins of a Solar Empire II</td>\n",
-       "      <td>15-08-2024</td>\n",
-       "      <td>214192</td>\n",
-       "      <td>49.99</td>\n",
-       "      <td>7815247.0</td>\n",
-       "      <td>12.452593</td>\n",
-       "      <td>88</td>\n",
-       "      <td>Indie</td>\n",
-       "      <td>Stardock Entertainment</td>\n",
-       "      <td>Ironclad Games Corporation,Stardock Entertainment</td>\n",
-       "      <td>1575940</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Legend of Mortal</td>\n",
-       "      <td>14-06-2024</td>\n",
-       "      <td>440998</td>\n",
-       "      <td>19.99</td>\n",
-       "      <td>7756399.0</td>\n",
-       "      <td>24.797817</td>\n",
-       "      <td>76</td>\n",
-       "      <td>Indie</td>\n",
-       "      <td>Paras Games,Obb Studio Inc.</td>\n",
-       "      <td>Obb Studio Inc.</td>\n",
-       "      <td>1859910</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Shin Megami Tensei V: Vengeance</td>\n",
-       "      <td>13-06-2024</td>\n",
-       "      <td>141306</td>\n",
-       "      <td>59.99</td>\n",
-       "      <td>7629252.0</td>\n",
-       "      <td>34.258496</td>\n",
-       "      <td>96</td>\n",
+       "      <th>1473</th>\n",
+       "      <td>Like a Dragon: Infinite Wealth</td>\n",
+       "      <td>25-01-2024</td>\n",
+       "      <td>369330</td>\n",
+       "      <td>69.99</td>\n",
+       "      <td>21265220.0</td>\n",
+       "      <td>38.898038</td>\n",
+       "      <td>91</td>\n",
        "      <td>AA</td>\n",
        "      <td>SEGA</td>\n",
-       "      <td>ATLUS</td>\n",
-       "      <td>1875830</td>\n",
+       "      <td>Ryu Ga Gotoku Studio</td>\n",
+       "      <td>2072450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>EA SPORTS™ Madden NFL 25</td>\n",
+       "      <td>15-08-2024</td>\n",
+       "      <td>50521</td>\n",
+       "      <td>69.99</td>\n",
+       "      <td>3182368.0</td>\n",
+       "      <td>16.106491</td>\n",
+       "      <td>50</td>\n",
+       "      <td>AAA</td>\n",
+       "      <td>Electronic Arts</td>\n",
+       "      <td>Tiburon</td>\n",
+       "      <td>2582560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1454</th>\n",
+       "      <td>Dragon's Dogma 2</td>\n",
+       "      <td>21-03-2024</td>\n",
+       "      <td>1785028</td>\n",
+       "      <td>69.99</td>\n",
+       "      <td>111478291.0</td>\n",
+       "      <td>31.687050</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AAA</td>\n",
+       "      <td>CAPCOM Co., Ltd.</td>\n",
+       "      <td>CAPCOM Co., Ltd.</td>\n",
+       "      <td>2054970</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              name releaseDate  copiesSold  price    revenue  \\\n",
-       "0                         WWE 2K24  07-03-2024      165301  99.99  8055097.0   \n",
-       "1            EARTH DEFENSE FORCE 6  25-07-2024      159806  59.99  7882151.0   \n",
-       "2        Sins of a Solar Empire II  15-08-2024      214192  49.99  7815247.0   \n",
-       "3                 Legend of Mortal  14-06-2024      440998  19.99  7756399.0   \n",
-       "4  Shin Megami Tensei V: Vengeance  13-06-2024      141306  59.99  7629252.0   \n",
+       "                                name releaseDate  copiesSold  price  \\\n",
+       "0                           WWE 2K24  07-03-2024      165301  99.99   \n",
+       "597               The Crew Motorfest  18-04-2024       56044  69.99   \n",
+       "1473  Like a Dragon: Infinite Wealth  25-01-2024      369330  69.99   \n",
+       "48          EA SPORTS™ Madden NFL 25  15-08-2024       50521  69.99   \n",
+       "1454                Dragon's Dogma 2  21-03-2024     1785028  69.99   \n",
        "\n",
-       "   avgPlaytime  reviewScore publisherClass                   publishers  \\\n",
-       "0    42.365140           71            AAA                           2K   \n",
-       "1    29.651061           57          Indie                  D3PUBLISHER   \n",
-       "2    12.452593           88          Indie       Stardock Entertainment   \n",
-       "3    24.797817           76          Indie  Paras Games,Obb Studio Inc.   \n",
-       "4    34.258496           96             AA                         SEGA   \n",
+       "          revenue  avgPlaytime  reviewScore publisherClass        publishers  \\\n",
+       "0       8055097.0    42.365140           71            AAA                2K   \n",
+       "597     1902618.0    18.217624           59            AAA           Ubisoft   \n",
+       "1473   21265220.0    38.898038           91             AA              SEGA   \n",
+       "48      3182368.0    16.106491           50            AAA   Electronic Arts   \n",
+       "1454  111478291.0    31.687050            0            AAA  CAPCOM Co., Ltd.   \n",
        "\n",
-       "                                          developers  steamId  \n",
-       "0                                    Visual Concepts  2315690  \n",
-       "1                                            SANDLOT  2291060  \n",
-       "2  Ironclad Games Corporation,Stardock Entertainment  1575940  \n",
-       "3                                    Obb Studio Inc.  1859910  \n",
-       "4                                              ATLUS  1875830  "
+       "                developers  steamId  \n",
+       "0          Visual Concepts  2315690  \n",
+       "597    Ubisoft Ivory Tower  2698940  \n",
+       "1473  Ryu Ga Gotoku Studio  2072450  \n",
+       "48                 Tiburon  2582560  \n",
+       "1454      CAPCOM Co., Ltd.  2054970  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,21 +199,16 @@
     "\n",
     "data = pd.read_csv('./Steam_2024_bestRevenue_1500.csv')\n",
     "\n",
+    "\n",
+    "data.sort_values(by='price', ascending=False, inplace=True)\n",
+    "\n",
     "data.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26ae8ab6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "AI_lesson1",
    "language": "python",
    "name": "python3"
   },
@@ -176,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
