--- a/steam.ipynb
+++ b/steam.ipynb
@@ -53,8 +53,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "a15d23f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1500 entries, 0 to 1197\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   name            1500 non-null   object \n",
+      " 1   releaseDate     1500 non-null   object \n",
+      " 2   copiesSold      1500 non-null   int64  \n",
+      " 3   price           1500 non-null   float64\n",
+      " 4   revenue         1500 non-null   float64\n",
+      " 5   avgPlaytime     1500 non-null   float64\n",
+      " 6   reviewScore     1500 non-null   int64  \n",
+      " 7   publisherClass  1500 non-null   object \n",
+      " 8   publishers      1499 non-null   object \n",
+      " 9   developers      1498 non-null   object \n",
+      " 10  steamId         1500 non-null   int64  \n",
+      "dtypes: float64(3), int64(3), object(5)\n",
+      "memory usage: 140.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('./Steam_2024_bestRevenue_1500.csv')\n",
+    "\n",
+    "\n",
+    "data.sort_values(by='price', ascending=False, inplace=True)\n",
+    "\n",
+    "#data cleaning\n",
+    "#data.isna().sum()\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebe60473-6f64-4359-a385-738d9da1f289",
+   "metadata": {},
+   "source": [
+    "Will investigate  missing developers and publishers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d762fbfd-bd85-456d-932f-cd3cacf02448",
    "metadata": {},
    "outputs": [
     {
@@ -93,122 +145,217 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>WWE 2K24</td>\n",
-       "      <td>07-03-2024</td>\n",
-       "      <td>165301</td>\n",
-       "      <td>99.99</td>\n",
-       "      <td>8055097.0</td>\n",
-       "      <td>42.365140</td>\n",
-       "      <td>71</td>\n",
-       "      <td>AAA</td>\n",
-       "      <td>2K</td>\n",
-       "      <td>Visual Concepts</td>\n",
-       "      <td>2315690</td>\n",
+       "      <th>643</th>\n",
+       "      <td>YUME 4</td>\n",
+       "      <td>12-01-2024</td>\n",
+       "      <td>18572</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>54457.0</td>\n",
+       "      <td>1.225076</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Indie</td>\n",
+       "      <td>Lovely Games</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2602730</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>597</th>\n",
-       "      <td>The Crew Motorfest</td>\n",
-       "      <td>18-04-2024</td>\n",
-       "      <td>56044</td>\n",
-       "      <td>69.99</td>\n",
-       "      <td>1902618.0</td>\n",
-       "      <td>18.217624</td>\n",
-       "      <td>59</td>\n",
-       "      <td>AAA</td>\n",
-       "      <td>Ubisoft</td>\n",
-       "      <td>Ubisoft Ivory Tower</td>\n",
-       "      <td>2698940</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1473</th>\n",
-       "      <td>Like a Dragon: Infinite Wealth</td>\n",
-       "      <td>25-01-2024</td>\n",
-       "      <td>369330</td>\n",
-       "      <td>69.99</td>\n",
-       "      <td>21265220.0</td>\n",
-       "      <td>38.898038</td>\n",
-       "      <td>91</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>SEGA</td>\n",
-       "      <td>Ryu Ga Gotoku Studio</td>\n",
-       "      <td>2072450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>EA SPORTS™ Madden NFL 25</td>\n",
-       "      <td>15-08-2024</td>\n",
-       "      <td>50521</td>\n",
-       "      <td>69.99</td>\n",
-       "      <td>3182368.0</td>\n",
-       "      <td>16.106491</td>\n",
-       "      <td>50</td>\n",
-       "      <td>AAA</td>\n",
-       "      <td>Electronic Arts</td>\n",
-       "      <td>Tiburon</td>\n",
-       "      <td>2582560</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1454</th>\n",
-       "      <td>Dragon's Dogma 2</td>\n",
-       "      <td>21-03-2024</td>\n",
-       "      <td>1785028</td>\n",
-       "      <td>69.99</td>\n",
-       "      <td>111478291.0</td>\n",
-       "      <td>31.687050</td>\n",
-       "      <td>0</td>\n",
-       "      <td>AAA</td>\n",
-       "      <td>CAPCOM Co., Ltd.</td>\n",
-       "      <td>CAPCOM Co., Ltd.</td>\n",
-       "      <td>2054970</td>\n",
+       "      <th>765</th>\n",
+       "      <td>Hypnosis Card</td>\n",
+       "      <td>19-01-2024</td>\n",
+       "      <td>10812</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>41891.0</td>\n",
+       "      <td>2.016618</td>\n",
+       "      <td>77</td>\n",
+       "      <td>Indie</td>\n",
+       "      <td>Lovely Games</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2544990</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                name releaseDate  copiesSold  price  \\\n",
-       "0                           WWE 2K24  07-03-2024      165301  99.99   \n",
-       "597               The Crew Motorfest  18-04-2024       56044  69.99   \n",
-       "1473  Like a Dragon: Infinite Wealth  25-01-2024      369330  69.99   \n",
-       "48          EA SPORTS™ Madden NFL 25  15-08-2024       50521  69.99   \n",
-       "1454                Dragon's Dogma 2  21-03-2024     1785028  69.99   \n",
+       "              name releaseDate  copiesSold  price  revenue  avgPlaytime  \\\n",
+       "643         YUME 4  12-01-2024       18572   4.99  54457.0     1.225076   \n",
+       "765  Hypnosis Card  19-01-2024       10812   4.99  41891.0     2.016618   \n",
        "\n",
-       "          revenue  avgPlaytime  reviewScore publisherClass        publishers  \\\n",
-       "0       8055097.0    42.365140           71            AAA                2K   \n",
-       "597     1902618.0    18.217624           59            AAA           Ubisoft   \n",
-       "1473   21265220.0    38.898038           91             AA              SEGA   \n",
-       "48      3182368.0    16.106491           50            AAA   Electronic Arts   \n",
-       "1454  111478291.0    31.687050            0            AAA  CAPCOM Co., Ltd.   \n",
-       "\n",
-       "                developers  steamId  \n",
-       "0          Visual Concepts  2315690  \n",
-       "597    Ubisoft Ivory Tower  2698940  \n",
-       "1473  Ryu Ga Gotoku Studio  2072450  \n",
-       "48                 Tiburon  2582560  \n",
-       "1454      CAPCOM Co., Ltd.  2054970  "
+       "     reviewScore publisherClass    publishers developers  steamId  \n",
+       "643           78          Indie  Lovely Games        NaN  2602730  \n",
+       "765           77          Indie  Lovely Games        NaN  2544990  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "data = pd.read_csv('./Steam_2024_bestRevenue_1500.csv')\n",
-    "\n",
-    "\n",
-    "data.sort_values(by='price', ascending=False, inplace=True)\n",
-    "\n",
-    "data.head()"
+    "data[data['developers'].isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7c7dd01a-2bee-4103-a3c6-d4ef98ee9b90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>releaseDate</th>\n",
+       "      <th>copiesSold</th>\n",
+       "      <th>price</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>avgPlaytime</th>\n",
+       "      <th>reviewScore</th>\n",
+       "      <th>publisherClass</th>\n",
+       "      <th>publishers</th>\n",
+       "      <th>developers</th>\n",
+       "      <th>steamId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>710</th>\n",
+       "      <td>Pixel Noir</td>\n",
+       "      <td>08-02-2024</td>\n",
+       "      <td>3129</td>\n",
+       "      <td>24.99</td>\n",
+       "      <td>47871.0</td>\n",
+       "      <td>8.461324</td>\n",
+       "      <td>67</td>\n",
+       "      <td>Hobbyist</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SWDTech Games</td>\n",
+       "      <td>754320</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           name releaseDate  copiesSold  price  revenue  avgPlaytime  \\\n",
+       "710  Pixel Noir  08-02-2024        3129  24.99  47871.0     8.461324   \n",
+       "\n",
+       "     reviewScore publisherClass publishers     developers  steamId  \n",
+       "710           67       Hobbyist        NaN  SWDTech Games   754320  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['publishers'].isna()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4e208cd-4a1a-4eb9-a2f9-49c375eb733a",
+   "metadata": {},
+   "source": [
+    "Using Steam ID we identified developers and publishers for the missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c8125228-4620-458b-8b94-687204688ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.loc[data['steamId'] == 2602730, 'developers'] = 'Lovely Games'\n",
+    "data.loc[data['steamId'] == 2544990, 'developers'] = 'Naku kinoko'\n",
+    "data.loc[data['steamId'] == 754320, 'publishers'] = 'SWDTech Games'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "92b6b2a1-4426-46df-92dc-6ee5ec00fff0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>releaseDate</th>\n",
+       "      <th>copiesSold</th>\n",
+       "      <th>price</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>avgPlaytime</th>\n",
+       "      <th>reviewScore</th>\n",
+       "      <th>publisherClass</th>\n",
+       "      <th>publishers</th>\n",
+       "      <th>developers</th>\n",
+       "      <th>steamId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [name, releaseDate, copiesSold, price, revenue, avgPlaytime, reviewScore, publisherClass, publishers, developers, steamId]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['developers'].isna()]\n",
+    "data[data['publishers'].isna()]"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AI_lesson1",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
