add sort for copies sold

--- a/steam.ipynb
+++ b/steam.ipynb
@@ -421,63 +421,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 89,
    "id": "d15bfb28",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>releaseDate</th>\n",
-       "      <th>copiesSold</th>\n",
-       "      <th>price</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>avgPlaytime</th>\n",
-       "      <th>reviewScore</th>\n",
-       "      <th>publisherClass</th>\n",
-       "      <th>publishers</th>\n",
-       "      <th>developers</th>\n",
-       "      <th>steamId</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [name, releaseDate, copiesSold, price, revenue, avgPlaytime, reviewScore, publisherClass, publishers, developers, steamId]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    name releaseDate  copiesSold  price       revenue  \\\n",
+      "1403              Banana  23-04-2024    30739148   0.00  3.129158e+05   \n",
+      "1452            Palworld  18-01-2024    16704850  29.99  3.923286e+08   \n",
+      "1450  Black Myth: Wukong  19-08-2024    15517278  59.99  8.377934e+08   \n",
+      "1451       HELLDIVERS™ 2  08-02-2024    11905198  39.99  4.356356e+08   \n",
+      "1457       7 Days to Die  25-07-2024     9877443  44.99  8.978193e+07   \n",
+      "\n",
+      "      avgPlaytime  reviewScore publisherClass  \\\n",
+      "1403    26.142054           85          Indie   \n",
+      "1452    41.840761           94             AA   \n",
+      "1450    20.065041           96            AAA   \n",
+      "1451    39.205960           71            AAA   \n",
+      "1457    85.913585           89             AA   \n",
+      "\n",
+      "                           publishers                    developers  steamId  \n",
+      "1403                              Sky  Sky,AestheticSpartan,O'Brian  2923300  \n",
+      "1452                       Pocketpair                    Pocketpair  1623730  \n",
+      "1450                     Game Science                  Game Science  2358720  \n",
+      "1451       PlayStation Publishing LLC        Arrowhead Game Studios   553850  \n",
+      "1457  The Fun Pimps Entertainment LLC                 The Fun Pimps   251570  \n"
+     ]
     }
    ],
    "source": [
     "columns_to_check = ['price', 'copiesSold', 'revenue', 'avgPlaytime', 'reviewScore']\n",
-    "data[data[columns_to_check].lt(0).any(axis=1)]"
+    "data[data[columns_to_check].lt(0).any(axis=1)]\n",
+    "\n",
+    "data.sort_values(by='copiesSold', ascending=False, inplace=True)\n",
+    "\n",
+    "print(data.head())"
    ]
   },
   {
@@ -490,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "3d5d78b1",
    "metadata": {},
    "outputs": [
