--- a/spotify_yt.ipynb
+++ b/spotify_yt.ipynb
@@ -653,21 +653,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "e303a5b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "spyt_df[\"missing_youtube_data\"] = spyt_df[\"Views\"].isnull()\n",
-    "spyt_df[\"missing_spotify_data\"] = spyt_df[\"Stream\"].isnull()"
+    "spyt_df[\"missing_spotify_data\"] = spyt_df[\"Stream\"].isnull()\n",
+    "spyt_df['Comments'].fillna(0, inplace=True)\n",
+    "spyt_df['Likes'].fillna(0, inplace=True)\n",
+    "spyt_df.dropna(subset=['Danceability'], inplace=True)\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "df5f15e2",
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "c28cb1f2",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artist                  0\n",
+      "Track                   0\n",
+      "Album                   0\n",
+      "Album_type              0\n",
+      "Danceability            0\n",
+      "Energy                  0\n",
+      "Key                     0\n",
+      "Loudness                0\n",
+      "Speechiness             0\n",
+      "Acousticness            0\n",
+      "Instrumentalness        0\n",
+      "Liveness                0\n",
+      "Valence                 0\n",
+      "Tempo                   0\n",
+      "Duration_ms             0\n",
+      "Views                   0\n",
+      "Likes                   0\n",
+      "Comments                0\n",
+      "Licensed                0\n",
+      "official_video          0\n",
+      "Stream                  0\n",
+      "missing_youtube_data    0\n",
+      "missing_spotify_data    0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "### We add two additional fields to help handling/filter entries with missing Spotify or Youtube data without tampering with the dataset"
+    "spyt_df_clean = spyt_df[(spyt_df[\"missing_youtube_data\"] == False) & (spyt_df[\"missing_spotify_data\"] == False)]\n",
+    "missing = spyt_df_clean.isnull().sum()\n",
+    "print(missing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "aa95d85a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 19691 entries, 0 to 20717\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   Artist                19691 non-null  object \n",
+      " 1   Track                 19691 non-null  object \n",
+      " 2   Album                 19691 non-null  object \n",
+      " 3   Album_type            19691 non-null  object \n",
+      " 4   Danceability          19691 non-null  float64\n",
+      " 5   Energy                19691 non-null  float64\n",
+      " 6   Key                   19691 non-null  float64\n",
+      " 7   Loudness              19691 non-null  float64\n",
+      " 8   Speechiness           19691 non-null  float64\n",
+      " 9   Acousticness          19691 non-null  float64\n",
+      " 10  Instrumentalness      19691 non-null  float64\n",
+      " 11  Liveness              19691 non-null  float64\n",
+      " 12  Valence               19691 non-null  float64\n",
+      " 13  Tempo                 19691 non-null  float64\n",
+      " 14  Duration_ms           19691 non-null  float64\n",
+      " 15  Views                 19691 non-null  float64\n",
+      " 16  Likes                 19691 non-null  float64\n",
+      " 17  Comments              19691 non-null  float64\n",
+      " 18  Licensed              19691 non-null  object \n",
+      " 19  official_video        19691 non-null  object \n",
+      " 20  Stream                19691 non-null  float64\n",
+      " 21  missing_youtube_data  19691 non-null  bool   \n",
+      " 22  missing_spotify_data  19691 non-null  bool   \n",
+      "dtypes: bool(2), float64(15), object(6)\n",
+      "memory usage: 3.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "spyt_df_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "8539124d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Licensed          bool\n",
+      "official_video    bool\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert columns to boolean\n",
+    "spyt_df_clean.loc[:, \"Licensed\"] = spyt_df_clean[\"Licensed\"].astype(bool)\n",
+    "spyt_df_clean.loc[:, \"official_video\"] = spyt_df_clean[\"official_video\"].astype(bool)\n",
+    "\n",
+    "# Check data types\n",
+    "print(spyt_df_clean[[\"Licensed\", \"official_video\"]].dtypes)"
    ]
   }
  ],
